<resources>
    <string name="app_name">WeatherFinalApp</string>

    <string name="google_map_api_key">AIzaSyBZ14sR6n_7eGMP39vUcqKoIjR1-Rs04Lk</string>

    <string name="weather_app">Weather APP</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="alert">Alert</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="chance_of_rain">Chance of Rain</string>
    <string name="humidity">Humidity</string>
    <string name="title_5_days">5 Days</string>
    <string name="today_forecast">Today Forecast</string>
    <string name="home_title">Home</string>
    <string name="humidity_title">Humidity</string>
    <string name="cloud_title">Cloud</string>
    <string name="pressure_title">Pressure</string>
    <string name="wind_title">Wind</string>
    <string name="hourly_weather_title">Hourly Weather</string>
    <string name="weekly_weather_title">Weekly Weather</string>
    <string name="open_map_des">Open Map</string>
    <string name="settings_title">Settings</string>
    <string name="location_title">Location</string>
    <string name="map_title">Map</string>
    <string name="gps_title">GPS</string>
    <string name="arabic_title">Arabic</string>
    <string name="english_title">English</string>
    <string name="langage_title">Langage</string>
    <string name="temperature_title">Temperature</string>
    <string name="meter_sec_title">Meter/Sec</string>
    <string name="mile_hour_title">Mile/Hour</string>
    <string name="wind_speed_title">Wind Speed</string>
    <string name="celsius_title">Celsius</string>
    <string name="kelvin_title">Kelvin</string>
    <string name="fahrenheit_title">Fahrenheit</string>
    <string name="disable_title">Disable</string>
    <string name="notifications_title">Notifications</string>
    <string name="enable_title">Enable</string>
    <string name="favorite_title">Favorite</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="alert_title">Alert</string>
    <string name="selecy_date_title">Selecy Date</string>
    <string name="add_alert_title">Add Alert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="notification">Notification</string>
    <string name="select_date_title">Select Date</string>
    <string name="alarm_title">Alarm</string>
    <string name="select_location_title">Select Location</string>
    <string name="locationtitle">LocationTitle</string>
    <string name="metric_title">Metric</string>
    <string name="imperial_title">Imperial</string>
    <string name="standard_title">Standard</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="calendar">calendar</string>
    <string name="select_time">Select Time</string>
    <string name="calendar_title">Calendar</string>
</resources>