<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_id"
        android:title="@string/home"
        android:fontFamily="@font/lobster"
        android:icon="@drawable/baseline_home_24"/>


    <item
        android:id="@+id/alert_id"
        android:title="@string/alert"
        android:fontFamily="@font/lobster"
        android:icon="@drawable/alert_icon"/>

    <item
        android:id="@+id/fav_id"
        android:title="@string/favorite"
        android:fontFamily="@font/lobster"

        android:icon="@drawable/baseline_favorite_24"/>
    <item
        android:id="@+id/settings_id"
        android:fontFamily="@font/lobster"

        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"/>


</menu>