<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkOlor"
    tools:context=".Settings.view.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lobster"
            android:text="@string/settings_title"
            android:textColor="@color/startColor"
            android:textSize="38sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <GridLayout
            android:id="@+id/ll_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:columnCount="2"
            android:rowCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_home_title">


            <!-- Wind -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_wind_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/startColor"
                    android:elevation="8dp"
                    app:cardCornerRadius="50dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:paddingStart="30dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="10dp"
                        android:text="@string/wind_speed_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_wind_options_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/startColor"
                    android:elevation="8dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="16dp">


                        <RadioGroup
                            android:id="@+id/met_sec"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"

                            android:orientation="vertical"
                            android:padding="10dp">

                            <RadioButton
                                android:id="@+id/rbtn_meter_sec_option"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/meter_sec_title"
                                android:fontFamily="@font/lobster"
                                android:textColor="#FAF7F7" />

                            <RadioButton
                                android:id="@+id/rbtn_mile_hr_option"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/lobster"
                                android:text="@string/mile_hour_title"
                                android:textColor="#FAF8F8" />
                        </RadioGroup>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <!-- Language -->


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"

                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"


                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_language_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/startColor"
                    android:elevation="8dp"
                    app:cardCornerRadius="50dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/langage_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_language_options_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/startColor"
                    android:elevation="8dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="16dp">


                        <RadioGroup
                            android:id="@+id/radioGroupLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"

                            android:orientation="vertical"
                            android:padding="10dp">

                            <RadioButton
                                android:id="@+id/radioButtonEnglish"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/lobster"
                                android:text="@string/english_title"
                                android:textColor="#FAF7F7" />

                            <RadioButton
                                android:id="@+id/radioButtonArabic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/arabic_title"
                                android:fontFamily="@font/lobster"
                                android:textColor="#FAF8F8" />
                        </RadioGroup>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_temp_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/startColor"
                    android:elevation="8dp"
                    app:cardCornerRadius="50dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:paddingStart="30dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="30dp"
                        android:paddingBottom="10dp"
                        android:text="@string/temperature_title"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_temp_options_settings"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/startColor"
                    android:elevation="8dp"
                    app:cardCornerRadius="30dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="10dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="16dp">


                        <RadioGroup
                            android:id="@+id/radioGroupUnit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start"

                            android:orientation="vertical"
                            android:padding="10dp">

                            <RadioButton
                                android:id="@+id/radioButtonMetric"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/lobster"
                                android:text="@string/metric_title"
                                android:textColor="#FAF7F7" />

                            <RadioButton
                                android:id="@+id/radioButtonImperial"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/imperial_title"
                                android:fontFamily="@font/lobster"
                                android:textColor="#FAF8F8" />

                            <RadioButton
                                android:id="@+id/radioButtonStandard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/standard_title"
                                android:fontFamily="@font/lobster"
                                android:textColor="#FAF8F8" />
                        </RadioGroup>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>